# llmchat

./: .gitignore  README.md  pyproject.toml  test.py
helpers/: cli.py  cli_formater.py  model.py  rag.py  utils.py
llmchat/: main.py
llmchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
store/: roles.json
